--- a/html/recipes.html
+++ b/html/recipes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Street Food Hunters-Mypage</title>
+    <title>Street Food Hunters-Recipes</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,7 +14,6 @@
     <script src="https://kit.fontawesome.com/1959ac8c31.js" crossorigin="anonymous"></script>
 
 </head>
-
 
 <body>
     <div class="container-fluid">
@@ -78,7 +77,59 @@
             </div>
         </nav>
 
-</body>
+        
+        <div class="book roundborder cotainer-fluid">
+
+            <div class="left col-sm-12 col-md-6">
+                <img id="food" class="roundborder" src="../public/fishball.jpg" alt="food">
+            </div>
+
+            <div id="recipebox" class="middle col-sm-12 col-md-6">
+                <!-- 4 -->
+                <h1>Fishball</h1><br>
+                <h3>Difficulty: ★★★☆☆ </h3>
+                <h3>Cooking time: 20minutes </h3>
+                <h3>Ingredients:
+                    <br>Fish 100g, Flour 200g, 1/2 Water</h3><br>
+            <h3>How to:
+                <ul>1. do something</ul>
+                    <ul>2. do something more</ul>
+                    <ul>3. do some thing again</ul>
+                    <ul>4. eat it</ul>
+            </h3>
+
+            </div>
+
+        </div>
+    </div>
+
+<!-- comment box -->
+    <div class="cotainer-fluid book roundborder" id="commentbox">
+
+        <form action="post">
+            <H1>Share your thoughts about the recipe!</H1>
+        <label for="comment">Username</label>
+            <input type="text" name="comment" placeholder="comment here">
+
+            <div class="rate">
+                <input type="radio" id="star5" name="rate" value="5" />
+                <label for="star5" title="text">5 stars</label>
+                <input type="radio" id="star4" name="rate" value="4" />
+                <label for="star4" title="text">4 stars</label>
+                <input type="radio" id="star3" name="rate" value="3" />
+                <label for="star3" title="text">3 stars</label>
+                <input type="radio" id="star2" name="rate" value="2" />
+                <label for="star2" title="text">2 stars</label>
+                <input type="radio" id="star1" name="rate" value="1" />
+                <label for="star1" title="text">1 star</label>
+              </div>
+
+        <input type="submit" name="submit" >
+
+    </form>
+    </div>
+
+    </div>
 
 
 
@@ -89,7 +140,7 @@
     <!-- Latest compiled and minified Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="../public/main.js"></script>
+    <script src="script.js"></script>
 
     <!-- Latest compiled and minified Popper: Use for pop up bubble -->
 
