--- a/html/search.html
+++ b/html/search.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Street Food Fighters</title>
+    <title>Street Food Hunters-Search</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../public/style.css">
     <!-- icon -->
     <script src="https://kit.fontawesome.com/1959ac8c31.js" crossorigin="anonymous"></script>
 
@@ -17,8 +17,10 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Street Food Fighters</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <a class="navbar-brand" href="/">
+                <h1>Street Food Hunters</h1>
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,38 +28,49 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Recipes</a>
+                        <a class="nav-link" href="/recipes">Recipes</a>
                     </li>
 
                 </ul>
 
 
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="ID" aria-label="ID">
 
-                    <input class="form-control mr-sm-2" type="search" placeholder="Password" aria-label="Password">
-
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-                </form>
 
                 <ul>
-                    <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <div class="dropdown" id="dropdown">
+                        <a class="nav-link dropdown-toggle" href="/mypage" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            My page
+                            My Page
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Login</a>
-                            <a class="dropdown-item" href="#">My Page</a>
+
+                        <div class="dropdown-menu container-fluid" id="dropdownmenu" aria-labelledby="navbarDropdown">
+
+                            <a class="dropdown-item" href="/mypage">My Page</a>
+                            <a class="dropdown-item" href="/mypage">Login with Facebook</a>
+
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something </a>
+
+                            <form class="justify-content-lg-center form-inline my-2 my-lg-0">
+                                <input class="form-control mr-sm-2" type="search" placeholder="ID" aria-label="ID">
+
+                                <input class="form-control mr-sm-2" type="search" placeholder="Password"
+                                    aria-label="Password">
+
+                                <button id="login" class="m-n1 btn btn-outline-success my-2 my-sm-0"
+                                    type="submit">Login</button>
+
+                                   <!-- <button id="password" class="m-n1 btn btn-outline-success my-2 my-sm-0"><a href="#"> Forgot
+                                        password</a>
+                                </button> -->
+                            </form>
+
+                     
+                            
                         </div>
                     </div>
                 </ul>
+                <br><br><br>
 
 
 
