4thJune layout update

--- a/html/recipes.html
+++ b/html/recipes.html
@@ -106,8 +106,8 @@
 <!-- comment box -->
     <div class="cotainer-fluid book roundborder" id="commentbox">
 
-        <form action="post">
-            <H1>Share your thoughts about the recipe!</H1>
+        <form id="commentform" action="post">
+            <H1>Share your thoughts about the recipe!</H1><br>
         <label for="comment">Username</label>
             <input type="text" name="comment" placeholder="comment here">
 
@@ -124,7 +124,7 @@
                 <label for="star1" title="text">1 star</label>
               </div>
 
-        <input type="submit" name="submit" >
+     <br><input type="submit" name="submit" >
 
     </form>
     </div>
