--- a/html/newrecipe copy.html
+++ b/html/newrecipe copy.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="../public/style.css">
     <!-- icon -->
     <script src="https://kit.fontawesome.com/1959ac8c31.js" crossorigin="anonymous"></script>
-
+    <!-- include summernote css/js -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 </head>
 
 <body>
@@ -25,161 +27,104 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/recipes">Recipes</a>
+                        <a class="nav-link" href="/newrecipe">Create Your Own Recipes</a>
                     </li>
-
                 </ul>
-
-
-
-
                 <ul>
                     <div class="dropdown" id="dropdown">
                         <a class="nav-link dropdown-toggle" href="/mypage" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             My Page
                         </a>
-
                         <div class="dropdown-menu container-fluid" id="dropdownmenu" aria-labelledby="navbarDropdown">
-
                             <a class="dropdown-item" href="/mypage">My Page</a>
                             <a class="dropdown-item" href="/mypage">Login with Facebook</a>
-
                             <div class="dropdown-divider"></div>
-
                             <form class="justify-content-lg-center form-inline my-2 my-lg-0">
                                 <input class="form-control mr-sm-2" type="search" placeholder="ID" aria-label="ID">
-
                                 <input class="form-control mr-sm-2" type="search" placeholder="Password"
                                     aria-label="Password">
-
                                 <button id="login" class="m-n1 btn btn-outline-success my-2 my-sm-0"
                                     type="submit">Login</button>
-
                                 <!-- <button id="password" class="m-n1 btn btn-outline-success my-2 my-sm-0"><a href="#"> Forgot
                                         password</a>
                                 </button> -->
                             </form>
-
-
-
                         </div>
                     </div>
                 </ul>
                 <br><br><br>
-
-
-
             </div>
         </nav>
-
-
-        <div id="recipemain" class="book cotainer-fluid row">
-<!-- filters -->
-            <div id="filters">
-                <button type="button" class="btn btn-outline-dark">BBQ</button>
-                <button type="button" class="btn btn-outline-dark">STEAMED</button>
-                <button type="button" class="btn btn-outline-dark">DESSERT</button>
-                <button type="button" class="btn btn-outline-dark">FRIED</button><br>
-                <button type="button" class="btn btn-outline-dark">Cantonese</button>
-                <button type="button" class="btn btn-outline-dark">Chinese</button>
-                <button type="button" class="btn btn-outline-dark">Japanese</button>
-                <button type="button" class="btn btn-outline-dark">Korean</button>
-                <button type="button" class="btn btn-outline-dark">Thai</button>
-                 <!-- sort -->
-            <select id="sort" class="custom-select mr-sm-2" >
-                <option selected>Sort</option>
-                <option value="1">Rating</option>
-                <option value="2">New</option>
-            </select>
+        <div class="book roundborder cotainer-fluid">
+            <!-- <div class="left col-sm-12 col-md-6">
+                <img id="food" class="roundborder" src="../public/fishball.jpg" alt="food">
+            </div> -->
+            <div id="recipebox" class="middle col-sm-12 col-md-6">
+                <div class="form-row align-items-center">
+                    <div class="col-auto my-1">
+                        <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
+                        <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <option selected>Cuisine</option>
+                            <option value="1">Chinese</option>
+                            <option value="2">Japanese</option>
+                            <option value="3">Korean</option>
+                            <option value="4">Taiwanese</option>
+                            <option value="5">Thai</option>
+                            <option value="6">Western</option>
+                            <option value="7">Others</option>
+                        </select>
+                        <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <option selected>Cuisine</option>
+                            <option value="1">Chinese</option>
+                            <option value="2">Japanese</option>
+                            <option value="3">Korean</option>
+                            <option value="4">Taiwanese</option>
+                            <option value="5">Thai</option>
+                            <option value="6">Western</option>
+                            <option value="7">Others</option>
+                        </select></div><br>
+                </div>
+                <!-- 4 -->
+                <form>
+                    <label for="fname">Recipe name:</label>
+                    <input type="text" id="fname" name="fname" value="John"><br>
+                    <label for="lname">Description:</label>
+                    <input type="text" id="lname" name="lname" value="Doe"><br>
+                    <label for="lname">Difficulty:</label>
+                    <div class="rate">
+                        <input type="radio" id="star5" name="rate" value="5" />
+                        <label for="star5" title="text">5 stars</label>
+                        <input type="radio" id="star4" name="rate" value="4" />
+                        <label for="star4" title="text">4 stars</label>
+                        <input type="radio" id="star3" name="rate" value="3" />
+                        <label for="star3" title="text">3 stars</label>
+                        <input type="radio" id="star2" name="rate" value="2" />
+                        <label for="star2" title="text">2 stars</label>
+                        <input type="radio" id="star1" name="rate" value="1" />
+                        <label for="star1" title="text">1 star</label>
+                    </div>
+                    <label for="lname">Cooking Time:</label>
+                    <input type="text" id="lname" name="lname" value="Doe"><br>
+                    <label for="lname">How to:</label>
+                    <input type="text" id="lname" name="lname" value="Doe"><br>
+                </form>
+                <button type="button" class="btn btn-warning">Saving As Draft</button>
+                <button type="button" class="btn btn-success">Submit</button>
             </div>
-           
-
-            <!-- first row -->
-            <div class="row center">
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2> <a href="/recipes:1"> Spicy Fishball</a></h2>
-                    <p>pullip123</p>
-                    <img class="minviewimg" src="./fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="./fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="./fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="./fishball.jpg" alt="recipe image">
-                </div>
-
-            </div>
-            <!-- second row -->
-            <div class="row center">
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="/public/fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="/public/fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="/public/fishball.jpg" alt="recipe image">
-                </div>
-
-                <div class="eachrecipe col-sm-6 col-md-4 col-lg-3">
-                    <h2>Recipe Name</h2>
-                    <p>Username</p>
-                    <img class="minviewimg" src="/public/fishball.jpg" alt="recipe image">
-                </div>
-
-            </div>
-
         </div>
     </div>
-
-
-
     </div>
-
-
-
-
-
-
-
     <!-- Latest compiled and minified Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     <script src="script.js"></script>
-
     <!-- Latest compiled and minified Popper: Use for pop up bubble -->
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-
     <!-- Latest compiled and minified Bootstrap JavaScript -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
