--- a/html/signup.html
+++ b/html/signup.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/recipe">Recipes</a>
+                        <a class="nav-link" href="/recipes">Recipes</a>
                     </li>
 
                 </ul>
@@ -80,88 +80,68 @@
         <!-- sign up part -->
         <div class="signup">
             <br>
-            <h1>Add New Recipe</h1><br>
+            <h1>Sign up</h1><br>
             <form>
                 <div class="form-group row">
-                    <label for="recipename" class="col-sm-2 col-form-label">Recipe Name</label>
+                    <label for="inputEmail3" class="col-sm-2 col-form-label">Username</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="recipename">
+                        <input type="email" class="form-control" id="inputEmail3">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="cookingtime" class="col-sm-2 col-form-label">Cooking Time</label>
+                    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="cookingtime" placeholder="ex) 10minutes">
+                        <input type="password" class="form-control" id="inputPassword3">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="text" class="col-sm-2 col-form-label">Description</label>
+                    <label for="inputPassword3" class="col-sm-2 col-form-label">Confirm Password</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="recipedescription" placeholder="Please describe your recipe in short">
+                        <input type="password" class="form-control" id="inputPassword3">
                     </div>
                 </div>
                 <fieldset class="form-group">
-                    <!-- <div class="row">
-                        <legend class="col-form-label col-sm-2 pt-0">Difficulty</legend>
-                        <div class="col-sm-10 d-flex">
-                            <div class="form-group">
-                                <label for="exampleFormControlSelect2">Choose below</label>
-                                <select multiple class="form-control" id="exampleFormControlSelect2">
-                                  <option>Very Easy</option>
-                                  <option>Easy</option>
-                                  <option>Okay</option>
-                                  <option>Hard</option>
-                                  <option>Very Hard</option>
-                                </select>
-                              </div> -->
+                    <div class="row">
+                        <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
+                        <div class="col-sm-10">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1"
                                     value="option1" checked>
                                 <label class="form-check-label" for="gridRadios1">
-                                    <p>★☆☆☆☆</p>
-                                     
+                                    First radio
                                 </label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2"
                                     value="option2">
                                 <label class="form-check-label" for="gridRadios2">
-                                    <p>★★☆☆☆</p>
+                                    Second radio
                                 </label>
                             </div>
-                            <div class="form-check">
+                            <div class="form-check disabled">
                                 <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3"
-                                    value="option3" >
+                                    value="option3" disabled>
                                 <label class="form-check-label" for="gridRadios3">
-                                    <p>★★★☆☆</p>
-                                </label>
-                            </div>
-
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios4"
-                                    value="option4" >
-                                <label class="form-check-label" for="gridRadios4">
-                                    <p>★★★★☆</p>
-                                </label>
-                            </div>
-
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios5"
-                                    value="option5" >
-                                <label class="form-check-label" for="gridRadios5">
-                                    <p>★★★★★</p>
+                                    Third disabled radio
                                 </label>
                             </div>
                         </div>
                     </div>
                 </fieldset>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">HOW TO</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Please describe how you made the food"></textarea>
-                  </div>
+                <div class="form-group row">
+                    <div class="col-sm-2">Checkbox</div>
+                    <div class="col-sm-10">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                                Example checkbox
+                            </label>
+                        </div>
+                    </div>
+                </div>
             <br><br><div class="form-group row">
                     <div class="col-sm-10">
-                        <button type="submit" class="btn btn-outline-dark">UPLOAD</button>
+                        <button type="submit" class="btn btn-outline-dark">Sign up</button>
                     </div>
                 </div>
             </form>
