forgotpw, recipepg amendment

--- a/html/mypage.html
+++ b/html/mypage.html
@@ -35,9 +35,6 @@
 
                 </ul>
 
-
-
-
                 <ul>
                     <div class="dropdown" id="dropdown">
                         <a class="nav-link dropdown-toggle" href="/mypage" id="navbarDropdown" role="button"
@@ -77,6 +74,14 @@
 
             </div>
         </nav>
+
+<div class="book roundborder cotainer-fluid">
+
+    <h1>Hi USERNAME!</h1>
+
+
+</div>
+
 
 </body>
 
