--- a/html/login.html
+++ b/html/login.html
@@ -23,7 +23,7 @@
         <a href="/auth/google"><img src="g2.png" class="lgicon ml-lg-2" alt="google"></a>
     </div>
     <div class="dropdown-divider"></div>
-    <form class="justify-content-lg-center my-2 my-lg-0">
+    <form action="/login" method="post" class="justify-content-lg-center my-2 my-lg-0">
         <input class="form-control mr-sm-2 my-lg-2" type="text" name="username" placeholder="ID"
             aria-label="ID">
 
@@ -47,7 +47,7 @@
     <!-- Latest compiled and minified Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 
     <!-- Latest compiled and minified Popper: Use for pop up bubble -->
 
