--- a/html/login.html
+++ b/html/login.html
@@ -40,7 +40,7 @@
     </form>
 
     <div class="icons d-flex justify-content-center mt-4">
-        <p class="hint-text mr-2"><a href="#">Forgot Password?</a></p>
+        <p class="hint-text mr-2"><a href="/forgotpassword">Forgot Password?</a></p>
         <br>
         <p class="hint-text"><a href="/signup">Sign Up!</a></p>
     </div>
